<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.prosilion.superconductor</groupId>
  <artifactId>superconductor-parent</artifactId>
  <name>superconductor-parent</name>
  <version>1.16.0</version>
  <description>SuperConductor Java Nostr-Relay Framework and Web Application</description>
  <packaging>pom</packaging>

  <modules>
    <module>autoconfigure/base</module>
    <module>autoconfigure/h2db</module>
    <module>autoconfigure/jpa</module>
    <module>autoconfigure/mysql</module>
    <module>autoconfigure/redis</module>
    <module>autoconfigure/sqlite</module>
    <module>base</module>
    <module>lib/h2db</module>
    <module>lib/jpa</module>
    <module>lib/mysql</module>
    <module>lib/redis</module>
    <module>lib/sqlite</module>
    <module>starter/h2db</module>
    <module>starter/jpa</module>
    <module>starter/mysql</module>
    <module>starter/redis</module>
    <module>starter/sqlite</module>
    <module>superconductor/h2db</module>
    <module>superconductor/mysql</module>
    <module>superconductor/redis</module>
    <module>superconductor/sqlite</module>
  </modules>

  <properties>
    <java.version>21</java.version>
    <project.version>1.16.0</project.version>
    <spring-boot.version>3.5.1</spring-boot.version>
    <nostr-java-core.version>1.0.0</nostr-java-core.version>

    <awaitility.version>4.2.0</awaitility.version>
    <build-helper-maven-plugin.version>3.6.0</build-helper-maven-plugin.version>
    <commons-lang3.version>3.17.0</commons-lang3.version>
    <guava.version>33.2.1-jre</guava.version>
    <h2.version>2.2.224</h2.version>
    <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
    <jackson-module-afterburner.version>2.18.3</jackson-module-afterburner.version>
    <junit-jupiter.version>5.10.2</junit-jupiter.version>
    <lombok.version>1.18.34</lombok.version>
    <maven-javadoc-plugin.version>3.7.0</maven-javadoc-plugin.version>
    <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
    <maven-surefire-plugin.version>3.3.0</maven-surefire-plugin.version>
    <maven-failsafe-plugin.version>3.3.0</maven-failsafe-plugin.version>
    <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
    <mysql-connector-j.version>9.1.0</mysql-connector-j.version>
    <postgresql.version>42.7.3</postgresql.version>
    <subdivisions.version>1.3.0</subdivisions.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.apache.maven.plugin-tools</groupId>
        <artifactId>maven-plugin-annotations</artifactId>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot</artifactId>
      <version>${spring-boot.version}</version>
    </dependency>
<!--    <dependency>-->
<!--      <groupId>org.springframework.boot</groupId>-->
<!--      <artifactId>spring-boot-devtools</artifactId>-->
<!--      <version>${spring-boot.version}</version>-->
<!--    </dependency>-->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
      <version>${spring-boot.version}</version>
    </dependency>

    <dependency>
      <groupId>com.prosilion</groupId>
      <artifactId>nostr-java-core</artifactId>
      <version>${nostr-java-core.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.module</groupId>
      <artifactId>jackson-module-afterburner</artifactId>
      <version>${jackson-module-afterburner.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>${guava.version}</version>
    </dependency>
    
    <!--    <dependency>-->
    <!--      <groupId>org.postgresql</groupId>-->
    <!--      <artifactId>postgresql</artifactId>-->
    <!--      <version>${postgresql.version}</version>-->
    <!--      <scope>runtime</scope>-->
    <!--    </dependency>-->
    
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-thymeleaf</artifactId>
      <version>${spring-boot.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>${commons-lang3.version}</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <version>${spring-boot.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
          <encoding>${project.build.sourceEncoding}</encoding>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>

